[metadata]
name = roc_comparison_modified
description = A Python implementation of an algorithm for computing the statistical significance of comparing two sets of predictions by ROC AUC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ben-Drucker/roc_comparison-modified

[options]
packages = roc_comparison_modified
python_requires = >=3.7
include_package_data = True